--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_API_URL='https://stud.mgri.ru/'
-REACT_APP_SERVER_API_URL='http://localhost:3000/'
+#REACT_APP_SERVER_KEY='AKfycbwt5B8kkvPEJcZQbaaw4yqhD2_GBVnMuF58rhZeneyMxV__A9s03jWD63etyt3XUBrpNw'
+
+REACT_APP_SERVER_KEY='AKfycbzWfqgNnQ6Wg06ZcQgnrLbzMuT_KFrbl7ttthIKofccW21BozZy66dQaDsGe9D6s7QPqg'
