--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\maksr\Рабочий стол\favicon.ico,0
+IconResource=C:\Users\maksr\Рабочий стол\space.ico,0
 [ViewState]
 Mode=
 Vid=
